<resources>
    <string name="app_name">Boxobox</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>
    <string name="r_ponse_de_gauche">Réponse de gauche</string>
    <string name="r_ponse_de_droite">Réponse de droite</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>

    <!-- String for NFC -->
    <string name="service_name">CardService</string>
    <string name="card_title">CardEmulation</string>
    <string name="activer_l_alarm_bruit">Activer l\'alarm bruit</string>
    <string name="activer_l_alarm_luminosit">Activer l\'alarm luminosité</string>
    <string name="d_sactiver_l_alarm_bruit">Désactiver l\'alarm bruit</string>
    <string name="d_sactiver_l_alarm_luminosit">Désactiver l\'alarm luminosité</string>
    <string name="_22_10_17_22_33">22/10/17 22:33</string>
    <string name="type">TYPE</string>
    <string name="username">username</string>
    <string name="temperature">Temperature</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="humidit">Humidité</string>
    <string name="luminosity">Luminosity</string>
    <string name="recharger">Recharger</string>
</resources>
